--- a/compat/CMakeLists.txt
+++ b/compat/CMakeLists.txt
@@ -4,10 +4,24 @@ project(compat CXX)
 add_library(
         compat
         SHARED
-        compat_log.cpp
+        ashmem-host.c
+        compat_log.c
+        fs.c
+        multiuser.c
+        process_name.c
+        sched_policy.c
+        sockets.c
+)
+
+target_compile_definitions(compat PRIVATE
+        HAVE_PRCTL
 )
 
 target_include_directories(compat PRIVATE
         include
+)
+
+install(TARGETS compat
+        LIBRARY DESTINATION "${INSTALL_DIR}/lib"
 )
 
