--- a/dalvik/dexopt/CMakeLists.txt
+++ b/dalvik/dexopt/CMakeLists.txt
@@ -1,23 +1,17 @@
 cmake_minimum_required(VERSION 3.10)
 project(dexopt CXX)
 
-set(DEXOPT_SRC_FILES
+add_executable(dexopt
         OptMain.cpp
 )
 
-set(DEXOPT_INCLUDE_DIRS
-        ${CMAKE_CURRENT_SOURCE_DIR}/..              # dalvik
-        ${CMAKE_CURRENT_SOURCE_DIR}/../libdex       # dalvik/libdex
-        ${CMAKE_CURRENT_SOURCE_DIR}/../vm           # dalvik/vm
-        ${CMAKE_CURRENT_SOURCE_DIR}/../../system/core/include   # system/core/include
-        # ${CMAKE_CURRENT_SOURCE_DIR}/../../external/stlport/stlport  # external/stlport/stlport
-        # ${CMAKE_CURRENT_SOURCE_DIR}/../../bionic                   # bionic/
-        # ${CMAKE_CURRENT_SOURCE_DIR}/../../bionic/libstdc++/include # bionic/libstdc++/include
+target_include_directories(dexopt PRIVATE
+        ../libdex
+        ../vm
+        # ../../external/stlport/stlport  # external/stlport/stlport
+        # ../../bionic                   # bionic/
+        # ../../bionic/libstdc++/include # bionic/libstdc++/include
 )
-
-add_executable(dexopt ${DEXOPT_SRC_FILES})
-
-target_include_directories(dexopt PRIVATE ${DEXOPT_INCLUDE_DIRS})
 
 target_compile_definitions(dexopt PRIVATE
         ANDROID_SMP=0
@@ -31,6 +25,7 @@ target_link_libraries(dexopt PRIVATE
         dl
         pthread
         z
+        compat
 )
 
 target_compile_options(dexopt PRIVATE
@@ -57,3 +52,7 @@ target_compile_options(dexopt PRIVATE
 #         # z
 #     )
 # endif()
+
+install(TARGETS ${PROJECT_NAME}
+        RUNTIME DESTINATION "${INSTALL_DIR}/bin"
+)
