dalvikvm test pass

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ add_subdirectory(external/zlib)
 add_subdirectory(external/libffi)
 add_subdirectory(external/fdlibm)
 add_subdirectory(external/expat)
+add_subdirectory(external/icu4c)
 add_subdirectory(compat)
 add_subdirectory(libnativehelper)
 add_subdirectory(dalvik)
